--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @articles.title %></h1>
 <p><%= @articles.body %></p>
 <%= link_to "<< Back to Articles List", articles_path %>
+<%= link_to "Delete Article", article_path(@articles), method: :delete, data: {confirm: "Are you sure?"} %>
+<%= link_to "edit", edit_article_path(@articles) %>
