--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,3 +8,4 @@
   <% end %>
 </ul>
 <%= link_to "Create a New Article", new_article_path, class: "article_title" %>
+<%= link_to "View tags", tags_path %>
