--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,9 @@
 <p><%= @articles.body %></p>
 <%= render partial: 'comments/form' %>
 <%= link_to "<< Back to Articles List", articles_path %>
-<%= link_to "Delete Article", article_path(@articles), method: :delete, data: {confirm: "Are you sure?"} %>
-<%= link_to "edit", edit_article_path(@articles) %>
+<% if logged_in? %>
+  <%= link_to "Delete Article", article_path(@articles), method: :delete, data: {confirm: "Are you sure?"} %>
+  <%= link_to "edit", edit_article_path(@articles) %>
+<% end %>
 <h3>Comments (<%= @articles.comments.size %>)</h3>
 <%= render partial: 'articles/comment', collection: @articles.comments %>
